<resources>
    <string name="app_name">Checkpoint3 Firebase</string>
    <string name="firebase_user">quent176</string>

    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="register">Register</string>
    <string name="register_new">Register a new student</string>
    <string name="error_register">Please fill every field</string>
    <string name="loading">Chargement</string>
    <string name="add_grade">Ajouter une note</string>
    <string name="average">Moyenne :</string>
    <string name="fill_grade">Note</string>
    <string name="add_student">Etudiant ajouté !</string>
</resources>
